operacje na macierzach na jblas, czesciowy warunek stopu ,ogolne poprawki